--- a/office-com/src/style.scss
+++ b/office-com/src/style.scss
@@ -1,100 +1,149 @@
 .formcontainer {
-    background-color: #a7bcff;
-    height:100vh;
-    display:flex;
-    align-items:center;
-    justify-content:center;
+  background-color: #a7bcff;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    .firmwrapper{
-        background-color:white;
-        padding:20px 60px;
-        border-radius:10px;
-        
-            display:flex;
-            flex-direction:column;
-            gap:15px;
-        align-items:center;
-        
-        .logo{
-            color:#5d5b8d;
-            font-weight:bold;
+  .firmwrapper {
+    background-color: white;
+    padding: 20px 60px;
+    border-radius: 10px;
 
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
 
-        }
-        .title{
-                        color:#5d5b8d;
-            font-size:12;
-
-        }
-        input{
-            padding:15px;
-            border:none;
-            border-bottom:1px solid #a7bcff;
-
-            &::placeholder{
-                color:gray;
-            }
-        }
-        button{
-            background-color:blue;
-            color:white;
-            padding:10px;
-            font-weight:bold;
-            border:none;
-            cursor:pointer
-        }
-        label{
-            display:flex;
-            align-items:center;
-            gap:10px;
-            color:#5d5b8d;
-            font-size:12px;
-            cursor:pointer; 
-
-
-            img{
-                width:32px;
-                
-
-            }
-
-        }
-        p{
-            color:red;
-            font-size:12;
-margin-top:10px
-
-
-}
-        form{
-            display:flex;
-            flex-direction:column;
-            gap:15px;
-        }
-
-
+    .logo {
+      color: #5d5b8d;
+      font-weight: bold;
     }
-}
-
-.home{
-    background-color:blue;
-height:100vh;
-display:flex;
-align-items:center;
-justify-content:center;
-    
-}
-.container{
-    border:1px solid white;
-    border-radius:10px;
-    width:65%;
-    height:85%;
-    displaly:flex;
-    overflow:hidden
-
-    .sidebar{flex:1;
-        background-color:#3e3c61;
+    .title {
+      color: #5d5b8d;
+      font-size: 12;
     }
-    .chat{flex:2;}
+    input {
+      padding: 15px;
+      border: none;
+      border-bottom: 1px solid #a7bcff;
 
+      &::placeholder {
+        color: gray;
+      }
+    }
+    button {
+      background-color: blue;
+      color: white;
+      padding: 10px;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+    }
+    label {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      color: #5d5b8d;
+      font-size: 12px;
+      cursor: pointer;
+
+      img {
+        width: 32px;
+      }
+    }
+    p {
+      color: red;
+      font-size: 12;
+      margin-top: 10px;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+  }
+}
+
+.home {
+  background-color: rgb(130, 130, 236);
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.container {
+  border: 1px solid white;
+  border-radius: 10px;
+  width: 65%;
+  height: 80%;
+  display: flex;
+  overflow: hidden;
+
+  .sidebar {
+    flex: 1;
+    border-right: 1px solid #3e3c61;
+    background-color: #3e3c61;
+  }
+  .navbar {
+    display: flex;
+    align-items: center;
+    background-color: #2f2d55;
+    height: 50px;
+    padding: 10px;
+    justify-content: space-between;
+    color: #ddddf7;
+
+    .logo {
+      font-weight: bold;
+    }
+    .user {
+      display: flex;
+      gap: 10px;
+
+      .img {
+        background-color: #ddddf7;
+        height: 24px;
+        width: 24px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+      .button {
+        background-color: #5b5d8b;
+        color: #ddddf7;
+        font-size: 10px;
+        border: none;
+        cursor: pointer;
+      }
+    }
+  }
+  .search {
+    border-bottom: 1px solid gray;
+
+    .searchfo {
+      .input {
+      }
+    }
+  }
+  .userchat {
+    img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+    }
+    button{
+      background-color:#5d5b8d;
+      font-size:10px;
+      color:#ddddf7;
+      border:none;
+      cursor:pointer;
+    }
+
+    .userchinfo {
+    }
+  }
+
+  .chat {
+    flex: 2;
+  }
 }
