--- a/office-com/src/style.scss
+++ b/office-com/src/style.scss
@@ -71,79 +71,97 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.container {
-  border: 1px solid white;
-  border-radius: 10px;
-  width: 65%;
-  height: 80%;
-  display: flex;
-  overflow: hidden;
 
-  .sidebar {
-    flex: 1;
-    border-right: 1px solid #3e3c61;
-    background-color: #3e3c61;
-  }
-  .navbar {
+  .container {
+    border: 1px solid white;
+    border-radius: 10px;
+    width: 65%;
+    height: 80%;
     display: flex;
-    align-items: center;
-    background-color: #2f2d55;
-    height: 50px;
-    padding: 10px;
-    justify-content: space-between;
-    color: #ddddf7;
+    overflow: hidden;
 
-    .logo {
-      font-weight: bold;
-    }
-    .user {
-      display: flex;
-      gap: 10px;
+    .sidebar {
+      flex: 1;
+      border-right: 1px solid #3e3c61;
+      background-color: #3e3c61;
 
-      .img {
-        background-color: #ddddf7;
-        height: 24px;
-        width: 24px;
-        border-radius: 50%;
-        object-fit: cover;
-      }
-      .button {
-        background-color: #5b5d8b;
+      .navbar {
+        display: flex;
+        align-items: center;
+        background-color: #2f2d55;
+        height: 50px;
+        padding: 10px;
+        justify-content: space-between;
         color: #ddddf7;
-        font-size: 10px;
-        border: none;
-        cursor: pointer;
+
+        .logo {
+          font-weight: bold;
+        }
+        .user {
+          display: flex;
+          gap: 10px;
+
+          img {
+            background-color: #ddddf7;
+            height: 24px;
+            width: 24px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+          button {
+            background-color: #5b5d8b;
+            color: #ddddf7;
+            font-size: 10px;
+            border: none;
+            cursor: pointer;
+          }
+        }
+        
+      }
+      .search {
+        border-bottom: 1px solid gray;
+
+        .searchfo {
+          padding: 10px;
+          input {
+            background-color: transparent;
+            color: white;
+            border: none;
+            outline: none;
+            margin-left: -30%;
+
+
+            &::placeholder{
+              color: lightgray;
+            }
+          }
+        }
+      }
+      .userchat {
+        display: flex;
+        align-items: center;
+
+
+        img {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+        }
+        button {
+          background-color: #5d5b8d;
+          font-size: 10px;
+          color: #ddddf7;
+          border: none;
+          cursor: pointer;
+        }
+
+        .userchinfo {
+        }
       }
     }
-  }
-  .search {
-    border-bottom: 1px solid gray;
 
-    .searchfo {
-      .input {
-      }
+    .chat {
+      flex: 2;
     }
-  }
-  .userchat {
-    img {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-    }
-    button{
-      background-color:#5d5b8d;
-      font-size:10px;
-      color:#ddddf7;
-      border:none;
-      cursor:pointer;
-    }
-
-    .userchinfo {
-    }
-  }
-
-  .chat {
-    flex: 2;
   }
 }
