--- a/office-com/src/style.scss
+++ b/office-com/src/style.scss
@@ -140,6 +140,13 @@
       .userchat {
         display: flex;
         align-items: center;
+        color: wheat;
+        padding: 10px;
+        gap: 10px;
+        cursor: pointer;
+        &:hover{
+          background-color: #2f2d52;
+        }
 
 
         img {
@@ -156,6 +163,17 @@
         }
 
         .userchinfo {
+          span{
+            font-size: 18px;
+            font-weight: 500;
+            
+          }
+          p{
+            font-size: 14px;
+            color: lightgray;
+            margin-top: -0.5px;
+
+          }
         }
       }
     }
