--- a/office-com/src/style.scss
+++ b/office-com/src/style.scss
@@ -201,6 +201,35 @@
       .input{
         height: 50px;
         background-color: #fff; 
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-right: 10px;
+        padding-left: 10px;
+
+        input{
+          width: 100%;
+          border: none;
+          outline: none;
+          color: #2f2d52;
+
+          &::placeholder{
+            color: lightgray;
+          }
+        }
+        .send{
+          display: flex;
+          gap: 10px;
+          align-items: center;
+
+          button{
+            border: none;
+            padding: 10px 15px;
+            color: white;
+            background-color: #8da4f1;
+            cursor: pointer;
+          }
+        }
       }
     }
   }
