--- a/office-com/src/style.scss
+++ b/office-com/src/style.scss
@@ -197,6 +197,29 @@
         background-color: #ddddf7;
         padding-right: 85%;
         height: calc(100% - 100px);
+
+        .message{
+          margin-left: 10px;
+          display: flex;
+          gap: 20px;
+          .mesageinfo{
+
+            img{
+              width: 40px;
+              height: 40px;
+              border-radius: 50%;
+              object-fit: cover;
+            }
+
+
+          }
+          .messagecontent{
+            img{
+              width: 50%;
+            }
+
+          }
+        }
       }
       .input{
         height: 50px;
