--- a/office-com/src/style.scss
+++ b/office-com/src/style.scss
@@ -244,7 +244,10 @@
             }
 
           }
-          
+          &.owner{
+            flex-direction: row-reverse;
+            margin-right: -670%;
+          }
         }
       }
       .input{
