--- a/office-com/src/style.scss
+++ b/office-com/src/style.scss
@@ -1,3 +1,21 @@
+@mixin mobile{
+  @media screen and (max-width:480px){
+    @content;    
+  }
+}
+@mixin tablet{
+  @media screen and (max-width:720px) {
+    @content;
+    
+  }
+}
+@mixin laptop{
+  @media screen and (max-width:1200px) {
+    @content;
+    
+  }
+}
+
 .formcontainer {
   background-color: #a7bcff;
   height: 100vh;
@@ -18,6 +36,7 @@
     .logo {
       color: #5d5b8d;
       font-weight: bold;
+      
     }
     .title {
       color: #5d5b8d;
@@ -79,11 +98,16 @@
     height: 80%;
     display: flex;
     overflow: hidden;
+    @include tablet{
+      width: 90%;
+    }
 
     .sidebar {
       flex: 1;
       border-right: 1px solid #3e3c61;
       background-color: #3e3c61;
+      width: 35%;
+      position: relative;
 
       .navbar {
         display: flex;
@@ -96,6 +120,9 @@
 
         .logo {
           font-weight: bold;
+          @include tablet{
+            display: none;
+          }
         }
         .user {
           display: flex;
@@ -114,6 +141,10 @@
             font-size: 10px;
             border: none;
             cursor: pointer;
+            @include tablet{
+              position: absolute;
+              bottom: 10px;
+            }
           }
         }
       }
@@ -127,7 +158,7 @@
             color: white;
             border: none;
             outline: none;
-            margin-left: -30%;
+            // margin-left: -30%;
 
             &::placeholder {
               color: lightgray;
@@ -247,6 +278,20 @@
           &.owner{
             flex-direction: row-reverse;
             margin-right: -670%;
+            // width: 100%;
+            // padding-left: 600%;
+
+            .messagecontent{
+align-items: flex-end;
+            
+            p{
+              background-color: #8da4f1;
+              color: white;
+              margin-left: -40%;
+              border-radius: 10px 0px 10px 10px;
+              max-width: max-content;
+            }
+          }
           }
         }
       }
