update the data base

--- a/office-com/src/style.scss
+++ b/office-com/src/style.scss
@@ -52,7 +52,7 @@
       }
     }
     button {
-      background-color: blue;
+      background-color: rgb(56, 135, 199);
       color: white;
       padding: 10px;
       font-weight: bold;
