--- a/office-com/src/style.scss
+++ b/office-com/src/style.scss
@@ -179,8 +179,8 @@
         }
 
         img {
-          width: 50px;
-          height: 50px;
+          width: 50px !important;
+          height: 50px !important;
           border-radius: 50%;
         }
         button {
