--- a/office-com/src/style.scss
+++ b/office-com/src/style.scss
@@ -1,18 +1,16 @@
-@mixin mobile{
-  @media screen and (max-width:480px){
-    @content;    
+@mixin mobile {
+  @media screen and (max-width: 480px) {
+    @content;
   }
 }
-@mixin tablet{
-  @media screen and (max-width:720px) {
+@mixin tablet {
+  @media screen and (max-width: 768px) {
     @content;
-    
   }
 }
-@mixin laptop{
-  @media screen and (max-width:1200px) {
+@mixin laptop {
+  @media screen and (max-width: 1200px) {
     @content;
-    
   }
 }
 
@@ -27,59 +25,60 @@
     background-color: white;
     padding: 20px 60px;
     border-radius: 10px;
-
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
     align-items: center;
 
     .logo {
       color: #5d5b8d;
       font-weight: bold;
-      
+      font-size: 24px;
     }
     .title {
       color: #5d5b8d;
-      font-size: 12;
-    }
-    input {
-      padding: 15px;
-      border: none;
-      border-bottom: 1px solid #a7bcff;
-
-      &::placeholder {
-        color: gray;
-      }
-    }
-    button {
-      background-color: rgb(56, 135, 199);
-      color: white;
-      padding: 10px;
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-    }
-    label {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      color: #5d5b8d;
       font-size: 12px;
-      cursor: pointer;
-
-      img {
-        width: 32px;
-      }
-    }
-    p {
-      color: gray;
-      font-size: 12;
-      margin-top: 10px;
     }
     form {
       display: flex;
       flex-direction: column;
       gap: 15px;
+      input {
+        padding: 15px;
+        border: none;
+        border-bottom: 1px solid #a7bcff;
+
+        &::placeholder {
+          color: gray;
+        }
+      }
+
+      button {
+        background-color: rgb(56, 135, 199);
+        color: white;
+        padding: 10px;
+        font-weight: bold;
+        border: none;
+        cursor: pointer;
+      }
+      label {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: #5d5b8d;
+        font-size: 12px;
+        cursor: pointer;
+
+        img {
+          width: 32px;
+        }
+      }
+    }
+
+    p {
+      color: gray;
+      font-size: 12;
+      margin-top: 10px;
     }
   }
 }
@@ -98,21 +97,19 @@
     height: 80%;
     display: flex;
     overflow: hidden;
-    @include tablet{
+    @include tablet {
       width: 90%;
     }
 
     .sidebar {
       flex: 1;
-      border-right: 1px solid #3e3c61;
       background-color: #3e3c61;
-      width: 35%;
       position: relative;
 
       .navbar {
         display: flex;
         align-items: center;
-        background-color: #2f2d55;
+        background-color: #2f2d52;
         height: 50px;
         padding: 10px;
         justify-content: space-between;
@@ -120,7 +117,7 @@
 
         .logo {
           font-weight: bold;
-          @include tablet{
+          @include tablet {
             display: none;
           }
         }
@@ -141,7 +138,7 @@
             font-size: 10px;
             border: none;
             cursor: pointer;
-            @include tablet{
+            @include tablet {
               position: absolute;
               bottom: 10px;
             }
@@ -155,10 +152,9 @@
           padding: 10px;
           input {
             background-color: transparent;
-            color: white;
             border: none;
+            color: white;
             outline: none;
-            // margin-left: -30%;
 
             &::placeholder {
               color: lightgray;
@@ -167,11 +163,11 @@
         }
       }
       .userchat {
+        padding: 10px;
         display: flex;
         align-items: center;
-        color: wheat;
-        padding: 10px;
         gap: 10px;
+        color: white;
         cursor: pointer;
 
         &:hover {
@@ -179,9 +175,10 @@
         }
 
         img {
-          width: 50px !important;
-          height: 50px !important;
+          width: 50px;
+          height: 50px;
           border-radius: 50%;
+          object-fit: cover;
         }
         button {
           background-color: #5d5b8d;
@@ -191,8 +188,7 @@
           cursor: pointer;
         }
 
-        .userchinfo {       
-
+        .userchinfo {
           span {
             font-size: 18px;
             font-weight: 500;
@@ -200,7 +196,6 @@
           p {
             font-size: 14px;
             color: lightgray;
-            margin-top: -0.5px;
           }
         }
       }
@@ -215,122 +210,101 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        span {
-          color: lightgray;
-          padding-left: 10px;
-        }
-        .chaticons {
-          display: flex;
-          gap: 10px;
-          padding-right: 10px;
+        padding: 10px;
+        color: lightgray;
+      }
+      .chaticons {
+        display: flex;
+        gap: 10px;
+        // padding-right: 10px;
+        cursor: pointer;
+        img {
+          height: 24px;
           cursor: pointer;
-          img {
-            height: 24px;
-            cursor: pointer;
-          }
         }
       }
-      .messages{
+
+      .messages {
         background-color: #ddddf7;
-        padding-right: 85%;
-        height: calc(100% - 100px);
+        padding: 10px;
+        height: calc(100% - 160px);
         overflow: scroll;
 
-        .message{
-          margin-left: 10px;
+        .message {
           display: flex;
           gap: 20px;
           margin-bottom: 20px;
-          .mesageinfo{
+          .mesageinfo {
             display: flex;
             flex-direction: column;
-              color: gray;
-              font-weight: 300;
-              // width: 90%;
+            color: gray;
+            font-weight: 300;
 
-              .messageInfo {
-                display: flex;
-                flex-direction: column;
-                color: gray;
-                font-weight: 300;
-
-
-            img{
-              width: 50px;
-              height: 50px;
+            img {
+              width: 40px;
+              height: 40px;
               border-radius: 50%;
               object-fit: cover;
             }
           }
-            span{
-              // display: flex;
-              font-size: 12px;
-            }
-
-
-          }
-          .messagecontent{
-           max-width: 80%;
+          .messagecontent {
+            max-width: 80%;
             display: flex;
             flex-direction: column;
             gap: 10px;
-            p{
+            p {
               background-color: #fff;
               padding: 10px 20px;
               border-radius: 0px 10px 10px 10px;
               width: 100%;
-
             }
-            img{
-              width: 50%  ;
+            img {
+              width: 50%;
             }
-
           }
-          &.owner{
+          &.owner {
             flex-direction: row-reverse;
-            margin-right: -670%;
+            // margin-right: -670%;
             // width: 100%;
             // padding-left: 600%;
 
-            .messagecontent{
-align-items: flex-end;
-            
-            p{
-              background-color: #8da4f1;
-              color: white;
-              margin-left: -40%;
-              border-radius: 10px 0px 10px 10px;
-              max-width: max-content;
+            .messagecontent {
+              align-items: flex-end;
+
+              p {
+                background-color: #8da4f1;
+                color: white;
+                border-radius: 10px 0px 10px 10px;
+              }
             }
-          }
           }
         }
       }
-      .input{
+      .input {
         height: 50px;
-        background-color: #fff; 
+        background-color: white;
+        padding: 10px;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding-right: 10px;
-        padding-left: 10px;
 
-        input{
+        input {
           width: 100%;
           border: none;
           outline: none;
           color: #2f2d52;
+          font-size: 18px;
 
-          &::placeholder{
+          &::placeholder {
             color: lightgray;
           }
         }
-        .send{
+        .send {
           display: flex;
-          gap: 10px;
           align-items: center;
+          gap: 10px;
 
-          button{
+          button {
             border: none;
             padding: 10px 15px;
             color: white;
