--- a/office-com/src/style.scss
+++ b/office-com/src/style.scss
@@ -90,6 +90,17 @@
   align-items: center;
   justify-content: center;
 
+  .box {
+    position: absolute;
+    cursor: move;
+    color: black;
+    max-width: 215px;
+    border-radius: 5px;
+    padding: 1em;
+    margin: auto;
+    user-select: none;
+  }
+
   .container {
     border: 1px solid white;
     border-radius: 10px;
